--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<body>
 		<h1> i am the creator and the author of my destiny.</h1>
+		<h2>in my strength and power i am unstoppable</h2>
 	</body>
 
 </html>
