--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 		<h1> i am the creator and the author of my destiny.</h1>
 		<h2>in my strength and power i am unstoppable</h2>
 		<h1>you just have to believe and trust the process and all will be fine</h1>
+		<h1> just have to believe and trust the process and all will be fine</h1>
+
 	</body>
 
 </html>
